--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile1.jpeg" alt="">
+                    <img src="images/profile4.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Zain and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Ali and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile4.jpg" alt="">
+                        <img src="images/profile2.jpeg" alt="">
                         <div class="text">Ali Abdullah</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
@@ -250,7 +250,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">CodingNepal</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span>Created By <a href="https://www.codingnepalweb.com">CodingAleytech</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
