--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile4.jpeg" alt="">
+                        <img src="images/profile4.jpg" alt="">
                         <div class="text">Ali Abdullah</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
