--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile7.jpg" alt="">
+                    <img src="profile7.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Aley and I'm a <span class="typing-2"></span></div>
